# src/coinbase/coinbaseController.ts
@@ -8,13 +8,19 @@ import {
   Route,
   SuccessResponse,
 } from "tsoa";
-import { CoinbaseTest } from "./coinbase";
+import { CoinbaseTest, CoinbaseWebhook } from "./coinbase";
 import { CoinbaseService, CoinbaseTestParams } from "./coinbaseService";
 
 @Route("coinbase")
 export class coinbaseController extends Controller {
   @Get("test")
   public async getUser(): Promise<CoinbaseTest> {
-    return new CoinbaseService().get('hello from coinbase controller')
+    return new CoinbaseService().get("hello from coinbase controller");
+  }
+  @Post("webhook")
+  public async webhook(@Body() body: CoinbaseWebhook) {
+    console.log(body);
+    this.setStatus(201); // set return status 201
+    return;
   }
 }
